[tool.poetry]
name = "cipher_program"
version = "0.1.0"
description = "This is a program that delves into a classic cipher program, used by Julius Caesar himself. This is an opportunity to explore cryptographic encryption and decryption."
authors = ["prodhanm <mustafizur.prodhan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
